# mira-tts-api

./: .env.dist  .gitignore  README.md  config.py  pyproject.toml  server.py  tts.py
public/: index.html
src/mira/: model.py  utils.py
